--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "chai-http": "^4.2.1",
     "mocha": "^5.2.0",
     "zombie": "^6.1.4",
-    "helmet": "^3.15.0"
+    "helmet": "^3.15.0",
+    "mathjs": "^5.4.0"
   },
   "engines": {
     "node": "11.x"
